k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-api
  labels:
    app: kuber-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuber-api
  template:
    metadata:
      labels:
        app: kuber-api
    spec:
      containers:
        - name: kuber-api
          image: arigelis/kuber-api:1.0.0
          ports:
            - containerPort: 8080
