k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: total
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /kuber-api
            backend:
              service:
                name: kuber-api
                port:
                  number: 80
